# this-into-that

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  SHORTCUT_SETUP.md  app.py  political_songs_apple_music.md  political_songs_for_shortcut.txt  pyproject.toml
.githooks/: commit-msg
.github/: dependabot.yml
converters/: itunes_matcher.py  spotify_scraper.py  spotify_to_apple.py
planning/: README.md  backlog.md  progress.md
static/: style.css
templates/: index.html  results.html
